[tool.poetry]
name = "data-visualization"
version = "0.1.0"
description = ""
authors = ["HamzaAhmad97 <h.radiahmad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.1"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
pandas = "^1.3.4"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
